# mini_dalle

./: .gitignore  .ocamlformat  Makefile  README.org  docker-compose.yml  dune-project  mini_dalle.opam  requirements.txt
.build/: Dockerfile
examples/: conv.ml  dune  linear.ml  script.ml  tensor_tools_large.ml
lib/: attention.ml  attention.mli  constants.ml  constants.mli  dalle_bart_decoder.ml  dalle_bart_decoder.mli  dalle_bart_encoder.ml  dalle_bart_encoder.mli  dune  glu.ml  glu.mli  lwthttp.ml  lwthttp.mli  min_dalle.ml  min_dalle.mli  serialize.ml  serialize.mli  text_tokenizer.ml  text_tokenizer.mli  vqgan_detokenizer.ml  vqgan_detokenizer.mli
scripts/: export_decoder.py  export_detoker.py  export_encoder.py
test/: dune
